Added VisitorBattery base class